@@ -94,6 +94,7 @@ popd
 - [BGBUILD-68] Global .boxgrinder/config or rc style file for config
 - [BGBUILD-131] Check if OS is supported before executing the plugin
 - [BGBUILD-72] Add support for growing (not pre-allocated) disks for KVM/Xen
+- [BGBUILD-133] Support a consolidated configuration file
 
 * Mon Dec 20 2010  <mgoldman@redhat.com> - 0.7.1-1
 - Upstream release: 0.7.1
